# Scaly

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  build.sh  hello.scaly  install.sh  mkp  mkt  package-lock.json  package.json  publish.sh  scaly.scaly  scaly.sgm  scaly.workspace  scalysh.sln  stdlib.scaly  test.dtd  tests.sgm  tests.xml  vitest.config.ts
Containers/: Hash.scaly  HashMap.scaly  String.scaly  StringBuilder.scaly  Vector.scaly
Memory/: Bucket.scaly  Page.scaly  Pool.scaly  Region.scaly
Scaly.Compiler/: Lexer.cs
codegen/: grammar-doc.scm  helpers.scm  parser.scm  rules.scm  scaly.dsl  syntax-scaly.scm  syntax.scm  test-choose.dsl  test-controlflow.dsl  test-definitions.dsl  test-expressions.dsl  test.dsl  testcpp.scm  testdoc.scm  testjs.scm  testrules.scm
compiler/: Compiler.cpp  CompilerError.cpp  Configuration.cpp  Errors.cpp  Generator.cpp  Lexer.cpp  Model.cpp  ModelError.cpp  (+10 more)
scalyc/: CMakeLists.txt  Cargo.toml  ChooseTests.cpp  ChooseTests.h  CommonVisitor.cpp  CommonVisitor.h  CommonVisitor.scaly  Compiler.cpp  Compiler.h  Compiler.scaly  CompilerError.cpp  CompilerError.h  CompilerError.scaly  ControlFlowTests.cpp  ControlFlowTests.h  CppError.cpp  CppError.h  CppError.scaly  CppOutput.cpp  CppOutput.h  CppOutput.scaly  CppVisitor.cpp  CppVisitor.h  CppVisitor.scaly  DefinitionTests.cpp  DefinitionTests.h  Emitter.cpp  Emitter.h  EmitterTests.cpp  EmitterTests.h  ExpressionTests.cpp  ExpressionTests.h  HeaderVisitor.cpp  HeaderVisitor.h  HeaderVisitor.scaly  Inherits.cpp  Inherits.h  Inherits.scaly  Lexer.cpp  Lexer.h  (+60 more)
scalyc/codegen/: fodeclare.dsl  helpers.dsl  parser.dsl  rules.dsl  scaly.dsl  switches.dsl  syntax.dsl  visitor.dsl
scalyc/scaly/: main.scaly
scalyc/src/: compiler.rs  main.rs  repl.rs
scalyc/src/compiler/: generator.rs  grammar.dtd  model.rs  modeler.rs  parser.rs  planner.rs  scaly.sgm
scalyc/src/compiler/codegen/: parser.scm  rules.scm  syntax.scm
scalyc/src/compiler/parser/: lexer.rs
scalyc/src/compiler/parser/codegen/: parser.scm  scaly.dsl
scalyc/src/scalyc/: compiler.rs  errors.rs  lexer.rs  mod.rs  modulebuilder.rs  options.rs  options.scaly  parser.copy.rs  parser.rs  parser.scaly  plan.rs  scaly.sgm
scalyc/src/scalyc/codegen/: parser.scm  rules.scm  syntax.scm  visitor.scm
scalyc/tests/: argc.scaly  printarg.scaly  strlen.scaly
(+678 files in other folders)
